k8s/frontendservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/leocfig/frontend:latest
        ports:
        - containerPort: 5173
        resources:
          requests:
            cpu: "200m"
            memory: "500Mi"
          limits:
            cpu: "400m"
            memory: "500Mi"
        readinessProbe:
          httpGet:
            httpHeaders:
              - name: host
                value: localhost
            path: /
            port: 5173
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            httpHeaders:
              - name: host
                value: localhost
            path: /
            port: 5173
          initialDelaySeconds: 15
          periodSeconds: 20
      imagePullSecrets:
      - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: ClusterIP
