k8s/onlineservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlineservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onlineservice
  template:
    metadata:
      labels:
        app: onlineservice
    spec:
      containers:
      - name: onlineservice
        image: ghcr.io/leocfig/onlineservice:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "200m"
            memory: "300Mi"
          limits:
            cpu: "400m"
            memory: "300Mi"
        readinessProbe:
          httpGet:
            httpHeaders:
              - name: host
                value: localhost
            path: /health/
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            httpHeaders:
              - name: host
                value: localhost
            path: /health/
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 30
      imagePullSecrets:
      - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: onlineservice
  labels:
    app: onlineservice
spec:
  selector:
    app: onlineservice
  ports:
    - name: http-metrics
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
